AP-5785 Fix paging alignment (#1740)

--- a/Apromore-Core-Components/Apromore-Portal/src/main/webapp/themes/ap/common/css/zk.css
+++ b/Apromore-Core-Components/Apromore-Portal/src/main/webapp/themes/ap/common/css/zk.css
@@ -598,6 +598,7 @@ input[type="radio"]:checked:before {
 
 .z-paging-info {
     padding: 4px 0;
+    line-height: 14px;
 }
 
 .z-paging-button {
@@ -618,6 +619,10 @@ input[type="radio"]:checked:before {
     font-size: 14px !important;
     line-height: 16px !important;
     vertical-align: middle;
+}
+
+.z-paging .z-paging-icon {
+    line-height: 10px
 }
 
 /* Grid and listbox */
